# third_party2

./: .gitignore  README.md
archives/: help2man-1.47.10.tar.xz  log4cplus-2.0.2.tar.xz  log4cplus-2.0.4.tar.xz  nasm-2.14.01.tar.xz  x264.tar.bz2
cmake/: common_define.cmake  third_party.cmake
conf/: common_define_cmake_file_generator.py  common_define_make_file_generator.py  common_define_sh_file_generator.py  inc_dir_file_generator.py  main.py  main.sh  replace_install_prefix.sh  third_party.csv  xls_head.py
doc/: cflags等.md  cmake find_packge.txt  cmake_scope.md  cmake_scope.txt  flatbuf.md  gitignore.txt  git概念和操作.pptx  google_cpp_programming_specification(part).md  howto mount.md  mongodb_shell.txt  nginx_tcp_proxy_module.conf  ninja安装说明.txt  shell中[和[[的异同.txt  shell字符串比较.md  shell执行时打印命令自身.md  介绍一个成功的 Git 分支模型.doc  版本号的命名规则.md
patch/assimp-4.1.0/: CMakeLists.txt
patch/fcgi-2.4.1/include/: fcgio.h
patch/googletest-release-1.8.1/googletest/cmake/: internal_utils.cmake
patch/json2pb-master/: Makefile
patch/libb64-1.2.1/src/: so_makefile
patch/libevent-2.1.8-stable/: buffer.c  http.c
patch/libevent-2.1.8-stable/include/event2/: http.h
patch/libwebsockets-3.1.0/minimal-examples/http-server/minimal-http-server-eventlib-foreign/: CMakeLists.txt
patch/log4cplus-1.2.1/include/log4cplus/: loggingmacros.h  loglevel.h
patch/log4cplus-1.2.1/src/: loglevel.cxx  threads.cxx
patch/log4cplus-2.0.1/include/log4cplus/: loggingmacros.h
patch/log4cplus-2.0.1/src/: loglevel.cxx
patch/log4cplus-2.0.2/include/log4cplus/: loggingmacros.h  loglevel.h
patch/log4cplus-2.0.2/src/: threads.cxx
patch/log4cplus-2.0.4/src/: threads.cxx
patch/lua-5.3.5/src/: Makefile
patch/mysql-5.6.40/: CMakeLists.txt
patch/tolua/tolua++-1.0.93/src/lib/: CMakeLists.txt
patch/tolua/tolua-5.2.4/: CMakeLists.txt
patch/tolua/tolua-5.2.4/src/lib/: CMakeLists.txt
patch/tolua/toluapp/src/: CMakeLists.txt
patch/tolua/toluapp/src/lib/: CMakeLists.txt
